features and footer

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;800;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <title>GymRats: Group challenge</title>
 </head>
 
@@ -45,6 +46,119 @@
       <br>
       <a href="https://apps.apple.com/us/app/gymrats-group-challenge/id1453444814?uo=4"><img class="appStore" src="assets/app-store.png"></a>
     </div>
+    <div class="features">
+      <div class="feature">
+        <div>
+          <span class="fa-stack fa-1x">
+            <i class="iconBack fas fa-circle fa-stack-2x"></i>
+            <i class="iconTop fas fa-mountain fa-stack-1x"></i>
+          </span>
+        </div>
+        <div class="featureText">
+          <h3>
+            Challenge
+          </h3>
+          <p>
+            Start a challenge for a set number of days. Set a goal and reach it.
+          </p>
+        </div>
+      </div>
+      <div class="feature">
+        <div>
+          <span class="fa-stack fa-1x">
+            <i class="iconBack fas fa-circle fa-stack-2x"></i>
+            <i class="iconTop fas fa-heartbeat fa-stack-1x"></i>
+          </span>
+        </div>
+        <div class="featureText">
+          <h3>
+            Log workouts
+          </h3>
+          <p>
+            Track workouts by simply taking a picture. Optionaly add a description or tag a location.
+          </p>
+        </div>
+      </div>
+      <div class="feature">
+        <div>
+          <span class="fa-stack fa-1x">
+            <i class="iconBack fas fa-circle fa-stack-2x"></i>
+            <i class="iconTop fas fa-user-friends fa-stack-1x"></i>
+          </span>
+        </div>
+        <div class="featureText">
+          <h3>
+            Meant to be social
+          </h3>
+          <p>
+            Invite friends and family to workout together.
+          </p>
+        </div>
+      </div>
+      <div class="feature">
+        <div>
+          <span class="fa-stack fa-1x">
+            <i class="iconBack fas fa-circle fa-stack-2x"></i>
+            <i class="iconTop fas fa-comments fa-stack-1x"></i>
+          </span>
+        </div>
+        <div class="featureText">
+          <h3>
+            Chat
+          </h3>
+          <p>
+            Share a group chat to stay in touch. Drop a comment on a workout to let em know what's really good.
+          </p>
+        </div>
+      </div>
+      <div class="feature">
+        <div>
+          <span class="fa-stack fa-1x">
+            <i class="iconBack fas fa-circle fa-stack-2x"></i>
+            <i class="iconTop fas fa-chart-bar fa-stack-1x"></i>
+          </span>
+        </div>
+        <div class="featureText">
+          <h3>
+            All the stats
+          </h3>
+          <p>
+            Track number of workouts, group average a day, longest streak...
+          </p>
+        </div>
+      </div>
+      <div class="feature">
+        <div>
+          <span class="fa-stack fa-1x">
+            <i class="iconBack fas fa-circle fa-stack-2x"></i>
+            <i class="iconTop fas fa-history fa-stack-1x"></i>
+          </span>
+        </div>
+        <div class="featureText">
+          <h3>
+            History
+          </h3>
+          <p>
+            Participate in multiple challenges at once for a variety of goals and look back at past challenges.
+          </p>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <p class="footerText">Made by <a href="https://mack.cloud">Mack Hasz</a> in San Diego</p>
+      <div class="footerIcons">
+        <a href="mailto:support@gymrats.app">
+          <span class="fa-stack fa-1x">
+            <i class="socialIconBack fas fa-circle fa-stack-2x"></i>
+            <i class="socialIconTop fas fa-envelope fa-stack-1x"></i>
+          </span>
+        </a>
+      </div>
+      <div class="footerLinks">
+        <a href="/terms" target="_self">Terms of Service</a>
+        <a href="/privacy" target="_self">Privacy Policy</a>
+      </div>
+    </footer>
   </div>
 </body>
 
