--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             Challenge
           </h3>
           <p>
-            Start a challenge for a set number of days. Set a goal and reach it.
+            Start a challenge for a set number of days. Set a goal and maybe reach it.
           </p>
         </div>
       </div>
@@ -75,7 +75,7 @@
             Log workouts
           </h3>
           <p>
-            Track workouts by simply taking a picture. Optionaly add a description or tag a location.
+            Track workouts by simply taking a picture. Add a description, tag a location and add data like step and calorie count.
           </p>
         </div>
       </div>
@@ -88,7 +88,7 @@
         </div>
         <div class="featureText">
           <h3>
-            Meant to be social
+            Social
           </h3>
           <p>
             Invite friends and family to workout together.
@@ -107,7 +107,7 @@
             Chat
           </h3>
           <p>
-            Share a group chat to stay in touch. Drop a comment on a workout to let em know what's really good.
+            Share a group chat to stay in touch. Drop a comment on a workout to let them know how you feel.
           </p>
         </div>
       </div>
