--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <link rel="icon" href="assets/favicon.png">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;800;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/style.css">
