--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       <img class="yogaRat" src="assets/yoga-rat.png">
       <br>
       <a href="https://apps.apple.com/us/app/gymrats-group-challenge/id1453444814?uo=4"><img class="appStore" src="assets/app-store.png"></a>
+      <a href="https://play.google.com/store/apps/details?id=com.hasz.gymrats.app"><img class="appStore" src="assets/google-play.png"></a>
     </div>
     <div class="features">
       <div class="feature">
