--- a/index.html
+++ b/index.html
@@ -43,7 +43,36 @@
       <a href="/download" class="download">Download</a>
     </div>
   </div> 
-
+  <div style="margin: 0 auto;">
+    <main>
+      <section>
+        <div class="section-content">
+          <div class="col-2 small-order-2" style="position: relative; top: -60px;">
+            <h1>Get to the gym,<br>become a rat.</h1>
+            <p class="hero-text">
+              Band together to improve your fitness by competing in a group challenge. Enlist friends, family, teammates, colleagues, or whoever, to become gym rats.
+            </p>
+            <p class="hero-text">
+              GymRats integrates with the Apple watch and Google heath app. Boo yah! Isn’t that wonderful? I think so.
+            </p>
+            <div style="margin-top: 56px;">
+              <a href="https://apps.apple.com/us/app/gymrats-group-challenge/id1453444814?uo=4">
+                <img class="app-store" src="assets/app-store.png">
+              </a>
+              <a href="https://play.google.com/store/apps/details?id=com.hasz.gymrats.app" style="margin-left: 32px;">
+                <img class="app-store" src="assets/google-play.png">
+              </a>
+            </div>
+          </div>
+          <div class="col-2 small-order-2">
+            <div class="hero">
+              <img class="hero-image" src="assets/hero.png" />
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+  </div>
   <div class="container">
     <div class="features">
       <div class="feature">
