--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
       </section>
     </main>
   </div>
+  <div class="screenshots">
+
+  </div>
   <div class="container">
     <div class="features">
       <div class="feature">
@@ -177,6 +180,17 @@
       </div>
     </div>
   </div>
+  <footer>
+    <div class="borda"></div>
+    <div class="flexible">
+    <div>© GymRats 2020, All Rights Reserved</div>
+    <div style="margin-left: auto;">
+      <a href="https://twitter.com/GymRatsApp" target="_blank" rel="noreferrer">
+        <i class="fab fa-twitter" aria-hidden="true"></i>
+      </a>
+    </div>
+  </div>
+  </footer>
 </body>
 
 </html>
