--- a/index.html
+++ b/index.html
@@ -184,7 +184,14 @@
     <div class="borda"></div>
     <div class="flexible">
     <div>© GymRats 2020, All Rights Reserved</div>
+    <p class="footerText">Made with ❤️ in San Diego, California</p>
     <div style="margin-left: auto;">
+      <a href="/terms">
+        Terms of Service
+      </a>
+      <a href="privacy">
+        Privacy Policy
+      </a>
       <a href="https://twitter.com/GymRatsApp" target="_blank" rel="noreferrer">
         <i class="fab fa-twitter" aria-hidden="true"></i>
       </a>
