--- a/index.html
+++ b/index.html
@@ -17,25 +17,25 @@
     ██      ██      ████      ████   
 
 
- -->
+-->
 <!DOCTYPE html>
 <html>
 
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="assets/favicon.png">
+  <link rel="icon" href="/assets/favicon.png">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="apple-itunes-app" content="app-id=1453444814">
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;800;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="assets/style.css">
+  <link rel="stylesheet" href="/assets/style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-  <script src="assets/menu.js"></script>
+  <script src="/assets/menu.js"></script>
   <title>GymRats: Group challenge</title>
 </head>
 
 <body>
   <div class="nav">
-    <a href="/"><img class="logo" src="/assets/logo.png"></a>
+    <a href="/" style="margin-left: 0;"><img class="logo" src="/assets/logo.png"></a>
     <div class="nav-links" id="links">
       <a href="/about">About</a>
       <a href="/faq">FAQ</a>
@@ -189,7 +189,7 @@
       <a href="/terms">
         Terms of Service
       </a>
-      <a href="privacy">
+      <a href="/privacy">
         Privacy Policy
       </a>
       <a href="https://twitter.com/GymRatsApp" target="_blank" rel="noreferrer">
