--- a/about/index.html
+++ b/about/index.html
@@ -50,6 +50,16 @@
   <div style="margin: 0 auto;">
     <main>
       <section>
+        <div class="photos">
+          <img src="/assets/ob.png"/>
+          <img src="/assets/yoga.png"/>
+          <img src="/assets/run.jpg"/>
+          <img src="/assets/watch.png"/>
+          <img src="/assets/bike.jpg"/>
+          <img src="/assets/plsc.png"/>
+          <img src="/assets/bell.png"/>
+          <img src="/assets/cs.png"/>
+        </div>
         <div class="section-content">
           <h2>About</h2>
           <p>
@@ -60,7 +70,7 @@
             <br><br>
             Sports teams, office divisions, friend groups, and family members use the app to keep each other accountable and motivate each other to workout more often. A little competition goes a long way. The app's <a href="/features">feature set</a> boasts unlimited number of members, <a href="https://www.apple.com/ios/health/">Apple Health app</a> integration, custom scoring methods, group chat, and more. And that's also growing.
             <br><br>
-            To follow along the growth of the app you can <a href="https://www.twitter.com/GymRatsApp">follow</a> GymRats on Twitter or check out the <a href="/news">blog</a>. For the technicaly inclined, the app's source code is open and freely available to <a href="https://gitlab.com/gym-rats">view</a> and do with what you like. New features are added roughly on a monthly basis. You can view the progress of ongoing work by taking a look at active <a href="https://gitlab.com/groups/gym-rats/-/milestones">milestones</a>, the list of <a href="https://gitlab.com/groups/gym-rats/-/issues">open issues</a>, or the <a href="https://gitlab.com/groups/gym-rats/-/boards">kanban board</a>.
+            To keep in touch with the app's happenings you can <a href="https://www.twitter.com/GymRatsApp">follow</a> GymRats on Twitter or check out the <a href="/news">blog</a>. For the technicaly inclined, the app's source code is open and freely available to <a href="https://gitlab.com/gym-rats">view</a> and do with what you like. New features are added roughly on a monthly basis. You can view the progress of ongoing work by taking a look at active <a href="https://gitlab.com/groups/gym-rats/-/milestones">milestones</a>, the list of <a href="https://gitlab.com/groups/gym-rats/-/issues">open issues</a>, or the <a href="https://gitlab.com/groups/gym-rats/-/boards">kanban board</a>.
             <br><br>
             I am the sole engineer working on the project and development occurs part-time outside of a full-time job so speed of change is not super fast. Being a user of the app myself, and having participated in over 20 challenges, I am incentivized to keep adding features and making improvements. Full device wearables integration, goal based challenges, public challenges; there is a lot to do.
             <br><br>
