--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               Band together to improve your fitness by competing in a group challenge. Enlist friends, family, teammates, colleagues, or whoever, to become gym rats.
             </p>
             <p class="hero-text">
-              GymRats integrates with the Apple watch and Google heath app. Boo yah! Isn’t that wonderful? I think so.
+              The goal is to workout more often, any activity counts.
             </p>
             <div class="buttons">
               <a href="https://apps.apple.com/us/app/gymrats-group-challenge/id1453444814?uo=4">
@@ -94,7 +94,7 @@
             Challenge
           </h3>
           <p>
-            Start a challenge for a set number of days. Set a goal and maybe reach it.
+            Start a challenge for a set number of days. Set a goal and reach it with the help of some friends.
           </p>
         </div>
       </div>
@@ -110,7 +110,7 @@
             Log workouts
           </h3>
           <p>
-            Track workouts by simply taking a picture. Add a description, tag a location and add data like step and calorie count.
+            Track workouts by simply taking a picture. Add a description, tag a location, or add data like distance, duration, or calories.
           </p>
         </div>
       </div>
@@ -126,7 +126,7 @@
             Social
           </h3>
           <p>
-            Invite friends and family to workout together.
+            Invite an unlimited number of people to join the challenge group. Compete against one another and hold each other accountable by have a shared space for fitness.
           </p>
         </div>
       </div>
@@ -142,7 +142,7 @@
             Chat
           </h3>
           <p>
-            Share a group chat to stay in touch. Drop a comment on a workout to let them know how you feel.
+            Share a group chat to stay in touch. Drop a comment on a workout to let them know how you really feel.
           </p>
         </div>
       </div>
