--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             Social
           </h3>
           <p>
-            Invite an unlimited number of people to join the challenge group. Compete against one another and hold each other accountable by have a shared space for fitness.
+            Invite an unlimited number of people to join the challenge group. Compete against one another and hold each other accountable by having a shared space for fitness.
           </p>
         </div>
       </div>
