--- a/faq/index.html
+++ b/faq/index.html
@@ -31,7 +31,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <script src="/assets/menu.js"></script>
   <script src="/assets/faq.js"></script>
-  <title>GymRats: Group challenge | FAQ</title>
+  <title>FAQ | GymRats</title>
 </head>
 
 <body>
@@ -60,7 +60,7 @@
             </div>
             <div class="faq-content">
               <h4>How much does GymRats cost?</h4>
-              <p>Currently the app is free for all users, but that is likely to change in the future. Possible montetization methods include premium features or charging for groups with member count over X.</p>
+              <p>The app is free for all users, but that is likely to change in the future. Possible montetization methods include premium features or charging for groups with member count over X.</p>
               <br>
               <h4>How is the app free?</h4>
               <p>The app is relatively cheap to run with server and media hosting being the two main costs. The freeness of the app will change if more people choose to use the app.</p>
@@ -133,7 +133,7 @@
               <p>Since this is a competition, proof of workout is needed. Provide proof by photo of gym, sweaty selfie, or screenshot of running app.</p>
               <br>
               <h4>What devices wearables can I log a workout with?</h4>
-              <p>GymRats does not currently support direct integration with third-party devices like Garmin, FitBit, etc. GymRats does however integrate with the Apple Health app. If your activity is saved there, you can import it in GymRats.</p>
+              <p>GymRats does not support direct integration with third-party devices like Garmin, FitBit, etc. GymRats does however integrate with the Apple Health app. If your activity is saved there, you can import it in GymRats.</p>
               <br>
               <h4>How do I import a workout from the Apple Health app?</h4>
               <p>On the log workout screen look for the "Import workout from the Health App" button. You must give the app permission to use this feature.</p>
