--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <div style="margin: 0 auto;">
     <main>
       <section>
-        <div class="section-content">
+        <div class="section-content" style="max-width: 1380px !important;">
           <div class="col-2 small-order-1 copy" style="position: relative;">
             <h1>Get to the gym,<br>become a rat.</h1>
             <p class="hero-text">
