--- a/privacy/index.html
+++ b/privacy/index.html
@@ -3,7 +3,7 @@
 
 
 	
-    <title>Privacy Policy of GymRats</title>
+  <title>Privacy policy | GymRats</title>
       
       <meta content="This Application collects some Personal Data from its Users." name="description">
       <meta content="privacy policy" name="keywords">
