--- a/terms/index.html
+++ b/terms/index.html
@@ -3,7 +3,7 @@
 
 
 
-    <title>GymRats Terms of Service</title>
+    <title>Terms of Service | GymRats</title>
   
       <meta content="This Application collects some Personal Data from its Users." name="description">
       <meta content="terms and conditions" name="keywords">
