--- a/reset-password/index.html
+++ b/reset-password/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Reset password</title>
+    <title>Reset password | GymRats</title>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css">
   </head>
   <body>
