--- a/contact/index.html
+++ b/contact/index.html
@@ -41,7 +41,7 @@
       <a href="/faq">FAQ</a>
       <a href="/news">News</a>
       <a href="/contact" class="active">Contact</a>
-      <a href="/download" class="download">Download</a>
+      <a href="https://share.gymrats.app/download" class="download">Download</a>
     </div>
     <button class="hamburgler" onclick="showMenu()">
       <i class="fas fa-bars hide-big toggle-mobile-menu" style="font-size:20px" id="ham"></i>
