change some words

--- a/faq/index.html
+++ b/faq/index.html
@@ -60,13 +60,13 @@
             </div>
             <div class="faq-content">
               <h4>How much does GymRats cost?</h4>
-              <p>The app is free for all users, but that is likely to change in the future. Possible montetization methods include premium features or charging for groups with member count over X.</p>
+              <p>The app is free for all users, but that is likely to change in the future. Possible changes include charging for premium features or charging for groups having member count greater than X.</p>
               <br>
               <h4>How is the app free?</h4>
-              <p>The app is relatively cheap to run with server and media hosting being the two main costs. The freeness of the app will change if more people choose to use the app.</p>
+              <p>The app is relatively cheap to run with server and media hosting being the two main costs. The freeness of the app is meant to attract new users, but will change as the userbase grows.</p>
               <br>
               <h4>What do you do with my workout data?</h4>
-              <p>Your data is used solely to facilitate the service of application. GymRats does not, and never will, sell or give any data to any third parties for reasons of advertisement or other. You can read more in the <a href="/privacy">privacy policy.</a></p>
+              <p>Your data is used solely to facilitate the service of application. GymRats does not, and never will, sell or give any data to any third parties for reasons of advertisement tracking or other. You can read more in the <a href="/privacy">privacy policy.</a></p>
               <br>
               <h4>Who is involved with the making of this app?</h4>
               <p>There is a single <a href="https://mack.cloud">software engineer</a> involved part-time alongside the help of some friends for ideas and product development.</p>
@@ -81,7 +81,7 @@
               <br>
               <h4>What are the different challenge modes?</h4>
               <p>
-                Classic is the default challenge mode. It is a 30 day challenge scored by most number of workouts. The goal is to simply workout more often than the other members. What defines a workout is up to the group to decide. 
+                Classic is the default challenge mode. It is a 30 day challenge scored by most number of workouts. The goal is to simply workout more often. What defines a workout is up to the group to decide. 
               </p>
               <p>
                 If classic is too limiting, you can create a custom challenge and define your own settings. Score by duration, distance, calories, steps, or come up with your own point system.
@@ -113,8 +113,8 @@
               <h4>How do I enable/disable notifications?</h4>
               <p>You can configure push notifications on the settings screen.</p>
               <br>
-              <h4>How can I delete my account?</h4>
-              <p>Reach out to <a href="mailto:support@gymrats.app">support@gymrats.app</a> to request account deletion. This is a permenant action and cannot be recovered.</p>
+              <h4>How can I delete my account / all my data?</h4>
+              <p>Reach out to <a href="mailto:support@gymrats.app">support@gymrats.app</a> to request account and/or data deletion. This is a permenant action and cannot be recovered.</p>
               <br>
             </div>
             <div class="faq-section">
