--- a/faq/index.html
+++ b/faq/index.html
@@ -41,7 +41,7 @@
       <a href="/faq" class="active">FAQ</a>
       <a href="/news">News</a>
       <a href="/contact">Contact</a>
-      <a href="https://share.gymrats.app/download" class="download">Download</a>
+      <a href="https://share.gymrats.app/download" class="download">Get the app</a>
     </div>
     <button class="hamburgler" onclick="showMenu()">
       <i class="fas fa-bars hide-big toggle-mobile-menu" style="font-size:20px" id="ham"></i>
