--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <a href="/faq">FAQ</a>
       <a href="/news">News</a>
       <a href="/contact">Contact</a>
-      <a href="https://share.gymrats.app/download" class="download">Download</a>
+      <a href="https://share.gymrats.app/download" class="download">Get the app</a>
     </div>
     <button class="hamburgler" onclick="showMenu()">
       <i class="fas fa-bars hide-big toggle-mobile-menu" style="font-size:20px" id="ham"></i>
@@ -49,18 +49,16 @@
       <section class="ok">
         <div class="section-content" style="max-width: 1380px !important;">
           <div class="col-2 small-order-1 copy" style="position: relative;">
-            <h1>Get to the gym,<br>become a rat.</h1>
+            <h1>Free, unlimited group fitness challenges.</h1>
             <p class="hero-text">
-              Band together to improve your fitness by competing in a group challenge. Enlist friends, family, teammates, colleagues, or whoever, to become gym rats.
+              GymRats is a group fitness challenge app. Enlist friends, family, teammates, and colleagues to compete in healthy competition.
             </p>
-            <p class="hero-text">
-              The goal is to workout more often, any activity counts.
-            </p>
+            <p class="hero-text">Available on iOS and Android.</p>
             <div class="buttons">
               <a href="https://apps.apple.com/us/app/gymrats-group-challenge/id1453444814?uo=4">
                 <img class="app-store" src="assets/app-store.png">
               </a>
-              <a href="https://play.google.com/store/apps/details?id=com.hasz.gymrats.app">
+              <a href="https://play.google.com/store/apps/details?id=com.hasz.gymrats.app" style="margin-left: 20px;">
                 <img class="app-store" src="assets/google-play.png">
               </a>
             </div>
